public/css/editor.less
/* ... */
// Hiding these for now to see how we manage without them:
.apos-insert-before-widget,
.apos-insert-after-widget
{
  display: none;
  visibility: hidden;
}

.previewing
{
  .apos-area,
  .apos-singleton
  {
    .apos-control
    {
      opacity: 0;
    }    
  }

  .apos-area:hover,
  .apos-singleton:hover
  {
    .apos-control
    {
      opacity: 1;
    }
  }
}


// Apostrophe Slideshow Modal
.apos-file-styled-container
{
  position: relative;
  width: 170px;
  height: 170px;
  display: inline-block;
  margin-left: 5px;
}

.apos-progress-container
{
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.apos-slideshow-file-in
{
  .apos-slideshow-file-in-message
  {
    display: block;
  }

  .apos-slideshow-drag-container
  {
    border: 2px dashed darken(@apos-base, 20%);
    
    &.apos-upload-disabled .apos-slideshow-file-in-message { background-color: red; &:hover{cursor: wait; } }
  }
}
.apos-slideshow-file-in-message
{
  display:none;
  z-index: 20;
  color: #FFF;
  text-align: center;
  background-color: @apos-base;
  opacity: 0.5;
  height: 100%;
  width: 100%;
  top: 0;
  font-size: 3em;
  right: 0;
  position: absolute;
  

  span
  {
    position: relative;
    display: block;
    padding-top: 100px;
  }
}

.apos-limit-reached
{
  position: absolute;
  bottom: 15px;
  left: 15px;
}

.apos-slideshow-drag-container
{ 
  border: 2px dashed @apos-base;
  padding: 17px 10px 30px 10px;
  position: relative;
  .clearfix;
  
  // &.apos-upload-disabled:hover {background-color: red;}
  
  &:hover
  {
    .apos-file-styled { opacity: 0.8; }  
  }
  
  .apos-file-input
  {
    position: absolute;
    top: 0;
    z-index: 10;
    height: 170px;
    width: 170px;
    // filter:alpha(opacity: 0);
    opacity: 0;
    &:hover
    {
      cursor: pointer;
      background-color: darken(@apos-base, 10%);
    }
  }
  .apos-file-styled
  {
    color: @apos-base;
    background-color: @apos-base;
    opacity: 0.5;
    height: 170px;
    width: 170px;
    position: relative;
    display: inline-block;
    &:hover
    {
      background-color: darken(@apos-base, 10%);
      color: darken(@apos-base, 10%);
      cursor: pointer;
      opacity: 0.7;
      
    }
    
    &:before
    {
      color: #FFF;
      visibility: visible;
      width: 100%;
      font-size: 2em;
      text-align: center;
      margin: 0;
      top: 43%;
      position: absolute;
      left: 0;
    }
  }
}


.apos-slideshow-editor .apos-slideshow-editor-item
{
  list-style: none;
  float: left;
  display: block;
  width: 170px;
  // height: 170px;
  margin: 0 8px 15px;
  background-color: #eee;
  &.apos-template
  {
    display: none;
  }

  &.apos-slideshow-reveal-extra-fields
  {
    background:#eee;
    .apos-slideshow-extra-fields { display: block; width: 250px; }
  }

  &.apos-slideshow-reveal-crop
  {
    background:#eee;
    .apos-slideshow-crop{display: block;}
  }

  .apos-slideshow-editor-item-box
  {
    position: relative;
    overflow: hidden;
    width: 170px;
    height: 170px;
    
    &.apos-not-image::before
    {
      font-family: 'apos-icons';
      content: '\f0c5';
      position: absolute;
      top: 25%;
      left: 38%;
      font-size: 3em;
    }
    &.apos-not-image
    {
      &::after
      {
        position: absolute;
        top: 40%;
        left: 38%;
        font-size: 1em;
      }

      span
      {
        position: absolute;
        top: 56%;
        width: 100%;
        text-align: center;
      }
      .apos-crop{display: none;}
    }

  }
  .apos-slideshow-editor-image { height: 120%; }

  .apos-slideshow-control
  {
    position: absolute;
    background-color: @apos-base;
    width: 25px;
    height: 25px;
    cursor: pointer;
    color: white;
    text-align: center;
    font-size: 1.3em;
    line-height: 1.4em;
    &:hover
    {
      background-color: darken(@apos-base, 10%);
      text-decoration: none;
      
      &::before { background-color: darken(@apos-base, 10%) }
    }

    &::before
    {
      font-family: 'apos-icons';
      background: @apos-base;
      font-size:1em;
      padding: 5px;
      font-size: 0.9em;
    }
  }
  .apos-remove
  {
    right: 0;
    top: 0;
  }
  .apos-edit
  {
    // display: none;
    right: 24px;
    top: 0;
    visibility: hidden;
    &::before
    {
      content:'\1f527';
      visibility: visible;
    }
  }
  .apos-slideshow-editor-item-extension
  {
    display: block;
    position: absolute;
    top: 2px;
    left: 2px;
    font-size: 40px;
    color: #aaa;
  }
  .apos-slideshow-editor-item-name
  {
    display: block;
    margin: 60px 4px 4px 4px;
    color: #444;
    word-wrap: break-word;
  }
}

.apos-files-item
{
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
  margin: 10px 0 10px 0;
  padding: 20px 10px;
  text-align: left;
  .apos-files-extension
  {
    position: relative;
    left: -21px !important;
    display: inline-block;
    top: 2px;
    left: 2px;
    font-size: 40px;
    color: #aaa;
    font-family: cabin !important;
    text-transform: uppercase;
    background-color: red;
    font-size: 10px !important;
    padding: 3px 5px;
    color: #FFF !important;
  }
  .icon-docs
  {

    &::before
    {
      font-size:3.5em;
      color: #333;
      visibility: visible;
    }
  }
  .apos-files-name
  {

    text-align: left;
    font-size: 150%;
    
    &:hover{ background-color: transparent;}
  }
}

.apos-editor .apos-files-item a {color: #000 !important;}

.apos-slideshow-editor .apos-slideshow-extra-fields-controls
{
  float: left;
    *{float:left;}
    input{margin-right:5px;}
}
/* ... */

